1.4.9
- Improve duplicate track settings feature

1.4.8
- Fix bug related to instrument changes
- Improve end of file detection
- Support for editing lyrics
- Correctly handle lyrics events when adding or deleting measures
- Allow deleting instrument through a contextual menu
- Preserve most recent controller values when deleting measures
- Metronome indicates starts of measures

1.4.7
- Fix for .MID and .MIDI files (upper-case extension)
- Workaround wxWidgets bug that caused spinners to disappear on OSX
- Allow navigating between notes with tab and shift-tab
- Now use FluidSynth and not TiMidity as MIDI synthesizer (Linux only)
- Reorganise preferences a bit
- Fix bug when deleting soloed track

1.4.6
- Add 'duplicate track' features
- Add 'recent files' menu
- Implement resizing notes with the mouse cursor
- Allow background tracks in score editor
- Score editor's notation flags (musical and linear notations) are now saved in .aria file
- Add GTK-style scrollbar for Linux systems
- "Select all" and "Unselect all" buttons for background tracks in track properties
- Add keyboard shortcut to change note velocity (Alt + up/down, Alt + pageup/pagedown)
- Update to latest version of libjdksmidi


1.4.5
- Fix bug when saving after exporting MIDI file
- Add 'Mute' and 'Solo'
- Ask for sequence properties on creation
- Add global track volume picker
- Add keyboard shortcuts to change magnetic grid
- Add 'Scroll notes into view' command
- Add tooltips to many track widgets

1.4.4
- Fix looping bugs
- Fix magnetic grid dropdown menu
- Fix bug preventing the name of the tempo controller from showing up
- Fix assertion failure on right-click
- Fix bug where the config file could get corrupted
- Use GDI+ in Windows builds to correct printing

1.4.3
- Improve 'new version' notification (no more a warning look, include link to website)
- Better handle when the zoom parameter is missing in a .aria file (which happens when loading a file generated by an old version)