@@ -1,5 +1,6 @@
 1.4.9
 - Improve duplicate track settings feature
+- Workaround event order issues
 
 1.4.8
 - Fix bug related to instrument changes
